--- a/.gitignore
+++ b/.gitignore
@@ -125,11 +125,12 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-
+# PyCharm project dir
 .idea/
 
 *.sqlite3
 
+# build files
 blog/migrations/
 
 static/admin/
